@@ -770,6 +770,9 @@ nscd_run (void *p)
   time_t next_prune = run_prune ? time (NULL) + CACHE_PRUNE_INTERVAL : 0;
   static unsigned long int nready;
 
+  if (my_number < lastdb)
+    setup_thread (&dbs[my_number]);
+
   conn.fd = sock;
   conn.events = POLLRDNORM;
 
